--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <ul class="menu">
           <li><a href="#">About Us</a></li>
           <li><a href="#">Our Mission</a></li>
-          <li><a href="#">Contact Us</a></li>
+          <li><a href="#contact-form">Contact Us</a></li>
         </ul>
       </nav>
     </header>
